manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scalabit-api
  namespace: scalabit
  labels:
    app: scalabit-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: scalabit-api
  template:
    metadata:
      labels:
        app: scalabit-api
    spec:
      imagePullSecrets:
        - name: gar-pull
      containers:
        - name: scalabit-api
          image: europe-west2-docker.pkg.dev/mystic-shelter-468310-a2/scalabit-repo/scalabit-api:e733c765e0b142b5ae42101ac827490a7056ba33
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /health 
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5
