manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: scalabit-api-svc
  namespace: scalabit
spec:
  selector:
    app: scalabit-api
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
  type: ClusterIP
